--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,9 +1,12 @@
+server:
+  port: 8081
 spring:
   application:
     name: api-gateway
   cloud:
     config:
       enabled: true
-      uri: http://localhost:8001
+      uri: http://192.168.100.116:8001
+      #uri: http://localhost:8001
       username: root
       password: s3cr3t
