--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
   cloud:
     config:
       enabled: true
-      #uri: http://192.168.100.116:8001
-      uri: http://localhost:8001
+      uri: http://52.191.98.85:8001
+      #uri: http://localhost:8001
       username: root
       password: s3cr3t
